fix: prevent overlapping of custom editors

--- a/modules/ext.OpenSemanticLab/SkinOverwrites.css
+++ b/modules/ext.OpenSemanticLab/SkinOverwrites.css
@@ -142,6 +142,14 @@ div.ve-hidden.ve-ce-leafNode.ve-ce-mwTransclusionNode {
     display: none !important;
 }
 
+/* prevent overlapping of editors */
+.ve-visible {
+    clear: both;
+}
+.ve-hidden {
+    clear: both;
+}
+
 /* hide oo-ui button elements in visual editor*/
 .ve-ce-leafNode .oo-ui-image-progressive {
     display: none !important;
